sol/2020_p1_f3_trem.txt
Trem da mina
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,2 s
Limite de memória permitido 64.0 MB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2020f3p1_trem.cpp: In function ‘int dijkstra(int, int, int)’:
2020f3p1_trem.cpp:15:10: error: reference to ‘distance’ is ambiguous
   15 |     fill(distance, distance + MAX_STATIONS, INT_MAX);
      |          ^~~~~~~~
In file included from /usr/include/c++/13/string:47,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from 2020f3p1_trem.cpp:2:
/usr/include/c++/13/bits/stl_iterator_base_funcs.h:148:5: note: candidates are: ‘template<class _InputIterator> typename std::iterator_traits< <template-parameter-1-1> >::difference_type std::distance(_InputIterator, _InputIterator)’
  148 |     distance(_InputIterator __first, _InputIterator __last)
      |     ^~~~~~~~
2020f3p1_trem.cpp:12:5: note:                 ‘int distance [10010]’
   12 | int
